--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -97,7 +97,31 @@
     "    y1 = int(image_center[1] - height * 0.5)\n",
     "    y2 = int(image_center[1] + height * 0.5)\n",
     "\n",
-    "    return image[y1:y2, x1:x2]"
+    "    return image[y1:y2, x1:x2]\n",
+    "\n",
+    "# main function for lab1\n",
+    "def execute_image_processing(img, angle, k, interpolation_type):\n",
+    "    # rotate image\n",
+    "    rotated_img = rotate_img(img, angle)\n",
+    "    \n",
+    "    # crop image\n",
+    "    image_height, image_width = rotated_img.shape[0:2]\n",
+    "    cropped_img = crop_around_center(\n",
+    "            rotated_img,\n",
+    "            *largest_rotated_rect(\n",
+    "                image_width,\n",
+    "                image_height,\n",
+    "                angle\n",
+    "            )\n",
+    "    )\n",
+    "\n",
+    "    # resize_image\n",
+    "    resized_img = cv2.resize(cropped_img, None, fx = k, fy = 1 / k, interpolation=interpolation_type)\n",
+    "\n",
+    "    # return result\n",
+    "    result_img = resized_img\n",
+    "    return result_img\n",
+    "    "
    ]
   },
   {
@@ -126,8 +150,11 @@
     }
    ],
    "source": [
+    "# select image\n",
     "image_path = input(\"Введите абсолютный путь до изображения: \")\n",
     "origin_img = cv2.imread(image_path)\n",
+    "\n",
+    "# show selected image\n",
     "plt.imshow(origin_img)\n",
     "plt.title(\"origin image\")\n",
     "plt.show()"
@@ -161,26 +188,19 @@
     }
    ],
    "source": [
+    "# input data\n",
     "angle = int(input(\"Введите угол поворота (в градусах): \"))\n",
     "k = float(input(\"Введите коэффициент сжатия из диапазона (0;1]: \"))\n",
     "interpolation_type_index = int(input(\"Выберите признак интерполяционной схемы (0 – нулевого порядка, 1 – первого порядка, 2 - третьего порядка): \"))\n",
-    "rotated_img = rotate_img(origin_img, angle)\n",
     "\n",
-    "image_height, image_width = rotated_img.shape[0:2]\n",
-    "cropped_img = crop_around_center(\n",
-    "        rotated_img,\n",
-    "        *largest_rotated_rect(\n",
-    "            image_width,\n",
-    "            image_height,\n",
-    "            angle\n",
-    "        )\n",
-    ")\n",
+    "# process image\n",
+    "result_img = execute_image_processing(origin_img, angle, k, interpolationMethods[interpolation_type_index])\n",
     "\n",
-    "resized_img = cv2.resize(cropped_img, None, fx = k, fy = 1 / k, interpolation=interpolationMethods[interpolation_type_index])\n",
-    "\n",
-    "result_img = resized_img\n",
+    "# save results\n",
     "cv2.imwrite(\"results/result.bmp\", result_img);\n",
     "#open_image(result_img)\n",
+    "\n",
+    "# show image in notebook\n",
     "plt.imshow(result_img)\n",
     "plt.title(\"result image\")\n",
     "plt.show()"
